# graph-pattern-id

./: .gitignore  README.md  brick-example.ttl  brick_example.py  comparing-rdflib-and-oxi.py  figuring_out_sparql_tables.py  graph_compression.py  group_nodes.py  group_nodes_old.py  hello.py  making_lean_graphs.py  namespaces.py  nb.ipynb  notes.md  pyproject.toml  reasoned_build.ttl  smallOffice_brick.ttl  sparql_matching.py  test-graph-old2.ttl  test-graph1.ttl  test-graph2.ttl  test-graph6.ttl  timetesting.csv  visualize_triples.py  vrf-cut-short.ttl  vrf-model-cut.ttl  with_oxi.py
algorithm/: algo5-brick.ttl  algo5-s223.ttl  main.py
bschema/: __init__.py  bschema.py  cli.py  main.py  namespaces.py  utils.py
drafts/: comparing-rdflib-and-oxi.py  nb.ipynb  with_oxi.py
examples/: Brick.ttl  brick-example-groups-no-data.html  brick-example-groups-no-data.ttl  brick-example-groups.ttl  brick-example-with-prefixes.ttl  brick-example.html  brick-example.ipynb  brick-example.ttl  brick-validation-testing.py  preparing-models-kgqa.ipynb  query-time-s223.csv  query-time.csv  query_success.csv  query_success.numbers  read_queries.py  s223-example-groups-no-data.html  s223-example-groups-no-data.ttl  s223-example-groups.ttl  s223-example.ipynb  s223-example.ttl  s223-query-testing.py  s223-validation-testing.py  testing-queries-camera-ready.ipynb  testing_improved_query.py
from-data-graph/: algo-testing.py  algo.ipynb  algo2-testing.ipynb  algo2.py  algo3-brick.ttl  algo3-testing.ipynb  algo3.py  algo4-brick.ttl  algo4.ipynb  algo4.py  algo5-s223.ttl  algo5.ipynb  b-schema-algo2.ttl  group_nodes.py  notes.md  temp.py  test-graph-brick.html  test-graph-long.ttl  test-graph.ttl  test-graph3.ttl  test-graph7.ttl  test-timing.py  timetesting.csv  vrf-cut-short.ttl  vrf-model-cut.ttl
ontologies/: Brick.ttl  Brick14.ttl  Brick144.ttl
templates/: new_template.yml  nodes.yml  relations.yml
test-graphs/: 223p.ttl  test-building.ttl  (+5 more)
(+274 files in other folders)
