[project]
name = "graph-pattern-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "pyontoenv==0.1.10a4",
    "rdflib>=7.0.0",
    "buildingmotif[topquadrant]",
    "jupyterlab>=4.2.5",
    "jupyterlab-rise>=0.42.0",
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.3",
    "sphinx-autodoc-bmotif==0.1.6",
    "sphinx-toolbox>=3.8.1",
    "sphinx-tabs>=3.4.5",
    "oxrdflib>=0.4.0",
    "pydot>=3.0.4",
    "tqdm>=4.67.1",
    "pyoxigraph>=0.4.11",
    "pip>=25.1.1",
    "pyvis>=0.3.2",
    "pyshacl>=0.30.1",
]


[tool.uv.sources]
buildingmotif = { git = "https://github.com/NREL/buildingmotif.git", rev = "develop" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
