[project]
name = "bschema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "pyontoenv==0.2.0",
    "rdflib>=7.0.0",
    "buildingmotif[topquadrant]",
    "ipykernel>=6.29.5",
    "oxrdflib>=0.4.0",
    "tqdm>=4.67.1",
    "pyoxigraph>=0.4.11",
    "pyvis>=0.3.2",
    "pyshacl>=0.30.1",
    "brick-tq-shacl>=0.3.4a2",
]


[tool.uv.sources]
buildingmotif = { git = "https://github.com/NREL/buildingmotif.git", rev = "develop" }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
]
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bschema"]

[project.scripts]
create-bschema = "bschema.cli:run"